WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224149
[GTK] Properly use CompletionHandler when USE_OPENGL_OR_ES is set to OFF
https://bugs.webkit.org/show_bug.cgi?id=224149
Summary
[GTK] Properly use CompletionHandler when USE_OPENGL_OR_ES is set to OFF
Charlene Wendling
Reported
2021-04-03 06:37:30 PDT
Properly use CompletionHandler when USE_OPENGL_OR_ES is set to OFF
Attachments
Patch
(1.83 KB, patch)
2021-04-03 06:38 PDT
,
Charlene Wendling
fujii
: review+
fujii
: commit-queue-
Details
Formatted Diff
Diff
Revised patch
(1.66 KB, patch)
2021-04-05 14:20 PDT
,
Charlene Wendling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Charlene Wendling
Comment 1
2021-04-03 06:38:36 PDT
Created
attachment 425093
[details]
Patch
Charlene Wendling
Comment 2
2021-04-03 06:41:45 PDT
When trying to build WebKit with USE_OPENGL_OR_ES set to off, the build fails with: LayerTreeHost.h:216:28: error: out-of-line definition of 'forceRepaintAsync' +does not match any declaration in 'WebKit::LayerTreeHost' LayerTreeHost.h:82:28: note: type of 1st parameter of member declaration does not match definition ('CompletionHandler<void ()> &&' vs 'CompletionHandler<void ()> &') It has been introduced by that change :
https://trac.webkit.org/changeset/271171/webkit
The attached patch fixes that issue.
Alex Christensen
Comment 3
2021-04-05 08:56:25 PDT
Comment on
attachment 425093
[details]
Patch You might consider calling it.
Fujii Hironori
Comment 4
2021-04-05 13:32:16 PDT
Comment on
attachment 425093
[details]
Patch style-checker failed. Please fix it. Otherwise, commit bot will complain.
Charlene Wendling
Comment 5
2021-04-05 14:20:50 PDT
Created
attachment 425205
[details]
Revised patch Here is it is. It passes check-webkit-style this time.
Alex Christensen
Comment 6
2021-04-05 18:34:20 PDT
Comment on
attachment 425205
[details]
Revised patch View in context:
https://bugs.webkit.org/attachment.cgi?id=425205&action=review
> Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:216 > +inline void LayerTreeHost::forceRepaintAsync(CompletionHandler<void()>&&) { }
I recommend calling the completion handler.
Fujii Hironori
Comment 7
2021-04-07 13:18:30 PDT
Charlene, what's your opinion on Alex's review point? I think it's just a stub to avoid linkage errors, not called from anywhere. I think it's no problem. Adding ASSERT_NOT_REACHED() might be another idea. inline void LayerTreeHost::forceRepaintAsync(CompletionHandler<void()>&&) { ASSERT_NOT_REACHED(); }
Charlene Wendling
Comment 8
2021-04-08 00:29:42 PDT
(In reply to Fujii Hironori from
comment #7
)
> Charlene, what's your opinion on Alex's review point? > I think it's just a stub to avoid linkage errors, not called from anywhere. > I think it's no problem. > Adding ASSERT_NOT_REACHED() might be another idea. > inline void LayerTreeHost::forceRepaintAsync(CompletionHandler<void()>&&) { > ASSERT_NOT_REACHED(); }
In fact, while i reported the build failure and proposed a possible fix, i'm not able to define what would be the proper course of action.
EWS
Comment 9
2021-04-10 15:02:57 PDT
Committed
r275802
(
236373@main
): <
https://commits.webkit.org/236373@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425205
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug